# rsc02

./: README.md  SPECIALIST_ADVISORY_ENHANCEMENT.md
docs/: global-rc-setup.md
rscrew/: .gitignore  DEBUG.md  LLM_ERROR_HANDLING.md  MULTI_MODEL_GUIDE.md  MULTI_MODEL_SETUP.md  PROVIDER_CONFIG_FIXES.md  README.md  SUDO_CAPABILITIES.md  TENACITY_COMPARISON.md  WORKFLOW_DEMO.md  debug_llm_test.py  information_response.md  llm_config.env  model_manager_cli.py  pyproject.toml  report.md  test_hybrid_dialogue.py
rscrew/docs/: cheatsheet.txt
rscrew/plans/: test_calc.md  test_plan_location.md  test_todo.md
rscrew/src/: main.py
rscrew/src/models/: data_models.py
rscrew/src/rscrew/: crew.py  dynamic_agent.py  interactive_dialogue.py  interactive_dialogue_old.py  llm_error_handler.py  main.py  model_manager.py  output_capture.py  output_manager.py  plan_manager.py  rc.py  tenacity_llm_handler.py
rscrew/src/rscrew/config/: agents.yaml  model_config.yaml  permissions_config.yaml  tasks.yaml
rscrew/src/rscrew/tools/: custom_tool.py  implementation_tools.py  programming_tools.py
rscrew/tests/assets/: basic_prompt.txt  file_prompt.txt  plan_prompt.txt  simple_prompt.txt  test_plan.md
