[project]
name = "rscrew"
version = "0.1.0"
description = "RSCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
rscrew = "rscrew.main:run"
run_crew = "rscrew.main:run"
train = "rscrew.main:train"
replay = "rscrew.main:replay"
test = "rscrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
